# Table-Class-Python

./: License  Links.txt  README.md  Table.py  remember.txt  setup.cfg  setup.py
Terminal-Table-Python/: Table.py
TerminalTable.egg-info/: PKG-INFO  SOURCES.txt
src/TerminalTable/: Table.py
src/TerminalTable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Team_stats.json  Test_Edit_Content.py  Test_Headers.py  Test_Structures.py  main.py
