[metadata]
name = TerminalTable
version = 0.1.0
author = Bob
author_email = endoflex24@gmail.com
description = A simple Python Class for displaying information as a customizable table in the console
long_discription = file: README.md
long_discription_content_type = text/markdown
url = https://github.com/endo-do/Terminal-Table-Python
project_urls =
    Bug Tracker = https://github.com/endo-do/Terminal-Table-Python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src